welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: reassignment to val
if (die1=6){
        ^